# DrishtiYOLO

./: .gitignore  MODEL_CARD.md  README.md  pyproject.toml  requirements.txt
configs/: idd.yaml
hf_space/: README.md  app.py  requirements.txt
notebooks/: drishti_demo.ipynb  drishti_eval.ipynb  drishti_train.ipynb
scripts/: download_clip.py  side_by_side_video.py  webcam_demo.py
